fixing project image spacing and project thumbnail radius

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body{
 
 .section-2{
     margin: 1%;
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 .work-list{
@@ -163,7 +163,7 @@ body{
     position: relative;
     max-width: 100%;
     height: auto;
-    border-radius: 1%;
+    border-radius: 2%;
     bottom: 0rem; 
     /* filter:grayscale(0); */
     transition:all 0.25s linear;
